# icon-browser

./: .gitattributes  .gitignore  README.md  app.py  create_index.py  download_images.py  pyproject.toml
data/: icon.csv
scripts/: create_index.py  download_images.py
src/icon_browser/infra/data_source/: icon_csv_path.py  icon_index_path.py  image_dir.py
src/icon_browser/infra/query/: retrieve_icons.py  retrieve_similar_vectors.py
src/lib/: voyager_session.py
typings/: voyager.pyi
